<resources>
    <string name="app_name">Ngar Mal</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="verify">Verify</string>
    <string name="next">Next</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pagination">.
    </string>
    <string name="enter_received_verifiation_code">Enter Received Verifiation Code</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="select_category">Select Category</string>
    <string name="picture">Picture</string>
    <string name="price_kyat">Price</string>
    <string name="per">per</string>
    <string name="submit">Submit</string>
    <string name="default_count">1</string>
    <string name="test_date">12/2/2</string>
    <string name="accept">လက်ခံပါသည်</string>
    <string name="btn_label_dismiss">Dismiss</string>
    <string name="item_image">Item Image</string>
    <string name="borrow_to">တင်ထားသောအငှားပစ္စည်းများ</string>
    <string name="borrow_from">ငှားရမ်းထားသောပစ္စည်းများ</string>
    <string name="all_categories">All Categories</string>
    <string name="car">ကား</string>
    <string name="camera">Camera And Accessories</string>
    <string name="more">More</string>
    <string name="all_categories_list">All</string>
    <string name="electronic">Electronic</string>
    <string name="enter_model_number">Model Number</string>
    <string name="brand_name">Brand Name</string>
    <string name="engine_power">Engine Power</string>
    <string name="seat_number">Seat Number</string>
    <string name="zoom">Zoom</string>
    <string name="title_activity_detail">Detail</string>

    <string name="gas_or_oil">Gas ကားလား/ဆီကားလား</string>
    <string name="gas">gas ကားလား</string>
    <string name="oil">ဆီကားလား</string>
    <string name="focus_condition">Focus ကောင်း/မကောင်း</string>
    <string name="focus_good">ကောင်းတယ်</string>
    <string name="focus_bad">မကောင်းဘူး</string>
    <string name="borrow_text">ငှားမယ်</string>

    <string-array name="myanmar_number">
        <item>၀</item>
        <item>၁</item>
        <item>၂</item>
        <item>၃</item>
        <item>၄</item>
        <item>၅</item>
        <item>၆</item>
        <item>၇</item>
        <item>၈</item>
        <item>၉</item>
    </string-array>

    <string name="day">ရက်</string>
    <string name="month">လ</string>
    <string name="year">နှစ်</string>

    <string name="fee">Ks ကျသင့်ပါမည်</string>
    <string name="time">ကြာချိန် </string>
    <string name="default_url_path">file directory</string>
    <string name="gas_car">gas ကား</string>
    <string name="oil_car">ဆီကား</string>
    <string name="name">အမည်</string>
    <string name="address">လိပ်စာ</string>
    <string name="phone_number">ဖုန်းနံပါတ်</string>
    <string name="start_borrow_date">စတင်ငှါးမည့်နေ့ရက်</string>
    <string name="number_of_borrow_day">ငှါးမည့်ကာလ</string>
    <string name="borrow_form">Borrow Form</string>
    <string name="form">Post</string>
    <string name="borrow_rule_and_regulation">၁။ပစ္စည်းငှါးရမ်းရာတွင် မှတ်ပုံတင်ပေးရပါမည် မှတ်ပုံတင်ကို ပစ္စည်းယူမည့်နေ့တွင် အပ်နှံခဲ့ရပါမည်။
        \n၂။ပစ္စည်းလာအပ်မည့်နေ့မှသာ မှတ်ပုံတင်ပြန်လည်ပေးမည် ။ \n ၃။ပစ္စည်းယူမည့်နေ့တွင် ငှါးရမ်းခ တဝက်ကို ပေးချေခဲ့ရပါမည် ။
        \n၄။ပြန်အပ်မည့်နေ့တွင် ကျန်တဝက်ကို ထပ်ပေးချေရပါမည် ။
         \n၅။ငှါးရမ်းစဉ်အတွင်း ပစ္စည်းအပျက်အစီးရှိပါက ထိုပစ္စည်း၏ တန်ဖိုးအတိုင်း ပေးလျော်ရပါမည်။
        \n၆။ပြန်အပ်မည့်နေ့ရောက်လျှင် အကြောင်းကြားပါမည် ပြန်အပ်နှံခြင်းမရှိပါက အရေးယူပါမည်။</string>
    <string name="rule_and_regulation">Rule and Regulation</string>
    <string name="agree">သဘောတူပါသည်</string>
    <string name="choose">Choose</string>
    <string name="borrow_by_day">ရက်အလိုက်ငါှးမယ်</string>
    <string name="borrow_by_week">အပတ်(week)လိုက်ငှားမယ်</string>
    <string name="borrow_by_month">လအလိုက်ငါှးမယ်</string>
    <string name="price_per_day">တရက်စာ ငှါးရမ်းခ</string>
    <string name="price_per_week">တပတ်စာ ငှါးရမ်းခ</string>
    <string name="price_per_month">တလစာ ငှါးရမ်းခ</string>


    <string name="borrow_number">ငှါးရမ်းထားသောအရေအတွက်</string>
    <string name="borrow_fee">ကျသင့်သောအဖိုးအခ</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Category</string>
    <string name="title_notifications">Notifications</string>

    <string name="owner_rule_regulation">
    ၁။ မိမိ၏ပို့စ်ကို ငှါးရမ်းမှုရှိလျှင် အကြောင်းကြားပါမည်။
    \n၂။မိမိရွေးချယ်ထားသည့် တရက်စာ (သို့) တပတ်စာ
    (သို့) တလစာ ငှါးရမ်းခများကို သေချာစွာထည့်သွင်းပေးရမည်။
    \n ၃။ ငှါးရမ်းမှုအဆင်ပြေခဲ့လျှင် ရရှိလာသည့် ငှါးရမ်းခ (၁၀%) ကို ကျွနု်ပ်တို့အား ပေးဆောင်ရပါမည်။
    \n၄။မိမိငှါးရမ်းမည့် ပစ္စည်းသည် ချက်ချင်းငှါးရမ်းရန် အဆင်မပြေ မှုရှိပါက ကျွနု်ပ်တို့ဘက်မှ ဆက်သွယ်သည့်အခါ
    သေချာစွာ ပြောကြားပေးရပါမည်

</string>
    <string name="damage">အပြစ်အနာအဆာများ</string>
    <string name="pending">စောင့်ဆိုင်းဆဲ</string>
    <string name="reject">ငြင်းဆိုပါသည်</string>
    <string name="accept_owner">တင်ခွင့်ပြုပါသည်</string>
    <string name="no_item">ပစ္စည်းမရှိသေးပါ</string>
    <string name="post_no_data">တင်ထားတာ မရှိပါ</string>
    <string name="borrow_no_data">ငှါးရမ်းထားမှု မရှိပါ</string>
    <string name="ngar_mal_facebook_page">Ngar Mal Facebook Page</string>
    <string name="about_us">About Us</string>
    <string name="history">History</string>
    <string name="share_app">Share App</string>
    <string name="log_out">Log out</string>
    <string name="app_info">ဒီAppကို ကျွန်တော်တို့ကျောင်းသားတို့မှ ပစ္စည်းငှါးရမ်းလိုသူများအတွက် အလွယ်တကူငှါးရမ်းယူနိုင်ရန် ရည်ရွယ်ထုတ်လုပ်ခြင်းဖြစ်သည် ပစ္စည်းငှါးရမ်းရာတွင် မလွယ်ကူခြင်း ၊ ရှာဖွေရခက်ခြင်း ဈေးနှုန်းများ သေချာမသိရှိခြင်း စသော အခက်အခဲများကို ဖြေရှင်းနိုင်အောင် ရေးသားထားပါသည် ထို့သို့ငှါးရမ်းရာတွင်လည်း အဆင်မပြေမှု မဖြစ်ရအောင် ကျွန်တော်တို့မှလည်း ကြားခံအနေဖြင့် ဆောင်ရွက်ပေးထားပါသည်။</string>
    <string name="ok">Ok</string>
    <string name="developed_by_team_28_uscy">Developed by Team 28(UCSY)</string>
    <string name="verifying">Verifying</string>
    <string name="engine_">CC</string>
    <string name="table">ခုံများ</string>
    <string name="dining">ပန်းကန်ခွက်ယောက်များ</string>
    <string name="accept_borrower">ငှါးရမ်းခွင့် ပြုပါသည်</string>


</resources>
