<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        tools:context="com.team28.borrow.presentation.feature.borrow.BorrowFormActivity">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp">

            <com.team28.borrow.util.custom_view.MMEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/name"
                android:padding="@dimen/_5sdp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/txtInputName"
            android:layout_margin="@dimen/_5sdp">

            <com.team28.borrow.util.custom_view.MMEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/address"
                android:padding="@dimen/_5sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInputAddress"
            android:layout_margin="@dimen/_5sdp">

            <com.team28.borrow.util.custom_view.MMEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_5sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInputPhone"
            android:layout_margin="@dimen/_5sdp">

            <com.team28.borrow.util.custom_view.MMEditText
                android:id="@+id/edtStartBorrowDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/start_borrow_date"
                android:inputType="date"
                android:padding="@dimen/_5sdp" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/rlLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInputDate">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputNumberBorrowDay"
                android:layout_width="match_parent"
                android:layout_toLeftOf="@id/spDate"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_toStartOf="@id/spDate">

                <com.team28.borrow.util.custom_view.MMEditText
                    android:id="@+id/edtNumberBorrowDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/number_of_borrow_day"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />


        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlLayout"
            android:layout_margin="@dimen/_5sdp"
            android:visibility="gone">

            <com.team28.borrow.util.custom_view.MMEditText
                android:id="@+id/edtFee"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/fee"
                android:inputType="date"
                android:padding="@dimen/_5sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtRule"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInputFee"
            android:layout_margin="@dimen/_5sdp">

            <com.team28.borrow.util.custom_view.MMEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:focusable="false"
                android:hint="@string/rule_and_regulation"
                android:inputType="textMultiLine"

                android:text="@string/borrow_rule_and_regulation"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </android.support.design.widget.TextInputLayout>


        <com.team28.borrow.util.custom_view.MMCheckBox
            android:id="@+id/cbAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRule"
            android:layout_margin="@dimen/_6sdp"
            android:text="@string/agree" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbAgree"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/colorPrimary"
            android:text="@string/submit" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
